--- a/app/src/main/res/layout/drawing_activity.xml
+++ b/app/src/main/res/layout/drawing_activity.xml
@@ -204,17 +204,28 @@
 
     </HorizontalScrollView>
 
-    <FrameLayout
-        android:id="@+id/container_frame"
+    <EditText
+        android:id="@+id/drawing_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/title"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:autofillHints="name"
+        android:inputType="textCapWords" />
+
+    <com.example.pencollab.DrawingView
+        android:id="@+id/drawinView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginTop="14dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/container_frame" />
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/container_frame"/>
 
     <LinearLayout
-        android:id="@+id/container_button"
+        android:id="@+id/container_button_share_and_save"
         android:layout_width="328dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
