--- a/app/src/main/res/layout/gallery_display.xml
+++ b/app/src/main/res/layout/gallery_display.xml
@@ -13,15 +13,9 @@
 
     <FrameLayout
         android:id="@+id/image_artwork"
-        android:layout_width="200dp"
-        android:layout_height="164dp"
-        android:background="@drawable/image_artwork"
-        android:orientation="vertical"
-        android:layout_margin="2dp">
-
-        <!-- Set the picture here -->
-
-    </FrameLayout>
+        android:layout_width="170dp"
+        android:layout_height="165dp"
+        android:layout_margin="2dp" />
 
     <TextView
         android:id="@+id/text_title_drawing"
