--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -89,7 +89,7 @@
                     android:hint="@string/enter_username"
                     android:textSize="14sp"
                     android:autofillHints=""
-                    android:inputType="text" />
+                    android:inputType="textCapWords" />
 
             </LinearLayout>
 
