--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -30,7 +30,6 @@
             android:contentDescription="@string/empty" />
 
         <TextView
-            android:id="@+id/text_user"
             android:layout_width="0dp"
             android:layout_height="25dp"
             android:layout_marginStart="8dp"
@@ -39,7 +38,7 @@
             android:includeFontPadding="false"
             android:maxLines="1"
             android:singleLine="true"
-            android:text="Patrick Dessine"
+            android:text="@string/profile"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -73,7 +72,7 @@
             <TextView
                 android:id="@+id/txt_user_name"
                 android:layout_width="match_parent"
-                android:layout_height="24dp"
+                android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:gravity="start|center_vertical"
                 android:includeFontPadding="false"
@@ -96,7 +95,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/container_button"
+            android:id="@+id/container_button_log_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/container_button"
