--- a/app/src/main/res/layout/drawing_activity.xml
+++ b/app/src/main/res/layout/drawing_activity.xml
@@ -60,7 +60,7 @@
 
             <LinearLayout
                 android:id="@+id/container_chip_brush"
-                android:layout_width="150dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/container_frame"
                 android:clipToPadding="false"
@@ -72,13 +72,11 @@
                 android:paddingTop="11dp">
 
                 <FrameLayout
-                    android:id="@+id/container_frame_brush"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:background="@drawable/container_shadow_icon">
 
                     <TextView
-                        android:id="@+id/text_icon_brush"
                         android:layout_width="match_parent"
                         android:layout_height="32dp"
                         android:layout_gravity="center"
@@ -92,7 +90,6 @@
                 </FrameLayout>
 
                 <TextView
-                    android:id="@+id/text_title_brush"
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:layout_marginStart="8dp"
@@ -107,7 +104,7 @@
 
             <LinearLayout
                 android:id="@+id/container_chip_colors"
-                android:layout_width="150dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:background="@drawable/container_frame"
@@ -120,13 +117,11 @@
                 android:paddingTop="11dp">
 
                 <FrameLayout
-                    android:id="@+id/container_frame_colors"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:background="@drawable/container_shadow_icon">
 
                     <TextView
-                        android:id="@+id/text_icon_colors"
                         android:layout_width="match_parent"
                         android:layout_height="32dp"
                         android:layout_gravity="center"
@@ -140,7 +135,6 @@
                 </FrameLayout>
 
                 <TextView
-                    android:id="@+id/text_title_colors"
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:layout_marginStart="8dp"
@@ -154,8 +148,8 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/container_chip_shapes"
-                android:layout_width="150dp"
+                android:id="@+id/container_eraser"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:background="@drawable/container_frame"
@@ -168,13 +162,11 @@
                 android:paddingTop="11dp">
 
                 <FrameLayout
-                    android:id="@+id/container_frame_shapes"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:background="@drawable/container_shadow_icon">
 
                     <TextView
-                        android:id="@+id/text_icon_shapes"
                         android:layout_width="match_parent"
                         android:layout_height="32dp"
                         android:layout_gravity="center"
@@ -188,7 +180,6 @@
                 </FrameLayout>
 
                 <TextView
-                    android:id="@+id/text_title_shapes"
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:layout_marginStart="8dp"
@@ -197,7 +188,7 @@
                     android:gravity="start|center_vertical"
                     android:includeFontPadding="false"
                     android:maxLines="2"
-                    android:text="Shapes"
+                    android:text="Eraser"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
