--- a/app/src/main/res/layout/gallery_display.xml
+++ b/app/src/main/res/layout/gallery_display.xml
@@ -15,7 +15,8 @@
         android:id="@+id/image_artwork"
         android:layout_width="170dp"
         android:layout_height="165dp"
-        android:layout_margin="2dp" />
+        android:layout_margin="2dp"
+        />
 
     <TextView
         android:id="@+id/text_title_drawing"
