--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal|top"
     android:orientation="vertical"
     android:paddingBottom="12dp"
-    android:paddingTop="10dp" >
+    android:paddingTop="20dp" >
 
 
     <LinearLayout
@@ -42,8 +42,7 @@
         android:gravity="start|center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="12dp"
-        android:paddingRight="12dp"
-        android:paddingTop="16dp">
+        android:paddingRight="12dp">
 
         <ImageView
             android:id="@+id/img_avatar"
