--- a/app/src/main/res/layout/discover_activity.xml
+++ b/app/src/main/res/layout/discover_activity.xml
@@ -41,17 +41,17 @@
             tools:ignore="TextSizeCheck" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/container_search_bar"
+    <EditText
+        android:id="@+id/search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="12dp"
-        android:background="@drawable/white_button_with_black_border"
         android:gravity="center"
-        android:text="@string/search"
-        android:textColor="@color/button_border"/>
+        android:hint="@string/search"
+        android:autofillHints="name"
+        android:inputType="textCapWords"/>
 
 
     <TextView
