--- a/app/src/main/res/layout/discover_activity.xml
+++ b/app/src/main/res/layout/discover_activity.xml
@@ -62,6 +62,7 @@
         android:layout_marginTop="28dp"
         android:gravity="start|center_vertical"
         android:maxLines="1"
+        android:visibility="gone"
         android:text="Featured Collaborations"
         android:textSize="18sp" />
 
