--- a/app/src/main/res/layout/discover_display.xml
+++ b/app/src/main/res/layout/discover_display.xml
@@ -49,6 +49,7 @@
             android:paddingBottom="10dp"
             android:singleLine="true"
             android:text="@string/empty"
+            android:visibility="gone"
             android:textSize="17sp" />
 
     </LinearLayout>
