--- a/app/src/main/res/layout/join_activity.xml
+++ b/app/src/main/res/layout/join_activity.xml
@@ -67,7 +67,7 @@
 
 
     <ListView
-        android:id="@+id/list_discover"
+        android:id="@+id/join_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="12dp"
