--- a/app/src/main/res/layout/discover_activity.xml
+++ b/app/src/main/res/layout/discover_activity.xml
@@ -68,7 +68,7 @@
 
 
     <ListView
-        android:id="@+id/list_discover"
+        android:id="@+id/discover_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="12dp"
