--- a/app/src/main/res/layout/preview_activity.xml
+++ b/app/src/main/res/layout/preview_activity.xml
@@ -39,7 +39,7 @@
             android:includeFontPadding="false"
             android:maxLines="1"
             android:singleLine="true"
-            android:text="Unknown"
+            android:text="@string/unknown"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -55,7 +55,7 @@
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:paddingTop="10dp"
-        android:text="Join"
+        android:text="@string/join"
         android:textColor="@color/button"/>
 
 
@@ -113,7 +113,6 @@
                     android:layout_height="match_parent"
                     android:gravity="start|center_vertical"
                     android:maxLines="1"
-                    android:text="Artwork"
                     android:textSize="14sp" />
 
                 <TextView
@@ -122,7 +121,6 @@
                     android:layout_height="match_parent"
                     android:gravity="start|center_vertical"
                     android:maxLines="1"
-                    android:text="By: Unknown"
                     android:textSize="12sp" />
 
             </LinearLayout>
@@ -138,7 +136,6 @@
                 android:layout_height="40dp"
                 android:layout_marginEnd="8dp"
                 android:gravity="end|top"
-                android:text="Created on: XXX"
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -190,7 +187,7 @@
                 android:includeFontPadding="false"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:text="Unknown"
+                android:text="@string/unknown"
                 android:textSize="14sp" />
 
 
