--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -133,29 +133,16 @@
         android:text="@string/featured_artwork"
         android:textSize="18sp" />
 
-    <LinearLayout
-        android:id="@+id/container_row"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:gravity="start|top"
-        android:orientation="horizontal"
+
+    <ListView
+        android:id="@+id/drawing_list"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
-        android:baselineAligned="false">
+        android:baselineAligned="false"/>
 
-
-        <ListView
-            android:layout_width="0dp"
-            android:layout_height="236dp"
-            android:layout_weight="1"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:baselineAligned="false"/>
-
-
-
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/btn_container"
@@ -168,7 +155,7 @@
         android:paddingRight="12dp">
 
         <Button
-            android:id="@+id/btn_secondary_container"
+            android:id="@+id/search_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -178,27 +165,8 @@
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
             android:paddingTop="10dp"
-            android:text="Sort"
+            android:text="@string/search"
             android:textColor="@color/button_border"
-            style="?android:attr/buttonBarButtonStyle" />
-                
-
-
-        <Button
-            android:id="@+id/btn_primary_container"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            android:background="@drawable/button_premium"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:paddingBottom="10dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:paddingTop="10dp"
-            android:text="Filter"
-            android:textColor="@color/button"
             style="?android:attr/buttonBarButtonStyle" />
 
     </LinearLayout>
@@ -211,7 +179,8 @@
         android:gravity="start|top"
         android:orientation="horizontal"
         android:paddingLeft="12dp"
-        android:paddingRight="12dp">
+        android:paddingRight="12dp"
+        android:visibility="gone">
 
         <LinearLayout
             android:id="@+id/container_card2"
