--- a/app/src/main/res/layout/discover_display.xml
+++ b/app/src/main/res/layout/discover_display.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="17dp"
     android:gravity="center_horizontal">
 
     <LinearLayout
@@ -54,11 +55,6 @@
 
     </LinearLayout>
 
-    <Space
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        android:layout_below="@+id/container_card"
-        android:layout_marginTop="6dp" />
 
 
 </RelativeLayout>
