--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -134,7 +134,7 @@
         android:textSize="18sp" />
 
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/drawing_list"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
