--- a/app/src/main/res/layout/preview_activity.xml
+++ b/app/src/main/res/layout/preview_activity.xml
@@ -70,6 +70,7 @@
         android:contentDescription="@string/empty"/>
 
     <LinearLayout
+        android:id="@+id/info_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
