--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -22,6 +22,7 @@
         android:paddingTop="11.5dp">
 
         <TextView
+            android:id="@+id/appTitle"
             android:layout_width="0dp"
             android:layout_height="25dp"
             android:layout_marginStart="8dp"
@@ -36,6 +37,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/container_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
